--- a/src/utils/typography.css
+++ b/src/utils/typography.css
@@ -1,10 +1,14 @@
+html {
+  color: #222F3E;
+  font-size: 16px;
+}
 h1 {
-  color: #1c3456;
-  font-family: 'Poppins';
-  font-size: 26px;
-  font-weight: normal;
+  color: #222F3E;
+  font-family: 'Butler';
+  font-size: 76px;
+  font-weight: 800;
   line-height: 1.2em;
-  margin: 0 0 30px;
+  margin: 0 0 70px;
 }
 h2 {
   color: #1c3456;
@@ -15,12 +19,13 @@ h2 {
   margin: 0 0 16px;
 }
 h3 {
-  color: #1c3456;
-  font-family: 'Poppins';
-  font-size: 20px;
-  font-weight: normal;
+  color: #222F3E;
+  font-family: 'Montserrat';
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: .01em;
   line-height: 1.2em;
-  margin: 0 0 16px;
+  margin: 0 0 12px;
 }
 h5 {
   font-size: 16px;
