Swap Butler for Playfair Display, a Google Font

--- a/src/utils/typography.css
+++ b/src/utils/typography.css
@@ -4,9 +4,9 @@ html {
 }
 h1 {
   color: #222F3E;
-  font-family: 'Butler';
+  font-family: 'Playfair Display';
   font-size: 76px;
-  font-weight: 800;
+  font-weight: 700;
   line-height: 1.2em;
   margin: 0 0 70px;
 }
