--- a/src/utils/typography.css
+++ b/src/utils/typography.css
@@ -5,12 +5,12 @@ body.noscroll {
 
 html {
   color: #222F3E;
-  font-family: 'Montserrat';
+  font-family: 'Open Sans';
   font-size: 16px;
 }
 h1 {
   color: #222F3E;
-  font-family: 'Playfair Display';
+  font-family: 'Poppins';
   font-size: 42px;
   font-weight: 700;
   line-height: 1.2em;
@@ -18,7 +18,7 @@ h1 {
 }
 h2 {
   color: #222F3E;
-  font-family: 'Montserrat';
+  font-family: 'Poppins';
   font-size: 24px;
   font-weight: 700;
   line-height: 1.2em;
@@ -26,7 +26,7 @@ h2 {
 }
 h3 {
   color: #222F3E;
-  font-family: 'Montserrat';
+  font-family: 'Poppins';
   font-size: 16px;
   font-weight: 700;
   letter-spacing: .01em;
